- чит двумя кнопками мыши одновременно

--- a/css/style.less
+++ b/css/style.less
@@ -21,11 +21,11 @@ body{
 }
 
 .resolute, .resolute:hover{
-    background: url('../img/flag.png') no-repeat 5px;
+    background: url('../img/flag.png') no-repeat 5px !important;
 }
 
 .bomb, .bomb:hover{
-    background: red url('../img/bomb.png') no-repeat 5px;
+    background: red url('../img/bomb.png') no-repeat 5px!important;
 }
 
 .label{
