fix background in js

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ body{
     cursor: pointer;
 }
 
+.green_field{
+    background: green;
+}
+
+.white_field{
+    background: white;
+}
+
 .field:hover, .hovered{
     background: #80BDCC;
 }
